Make sure left edge is displayed
When the "content" element is too wide to fit the root element,
the left edge is hidden. This commit fixes it.

--- a/web/app/src/App.css
+++ b/web/app/src/App.css
@@ -1,5 +1,10 @@
 .content {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  overflow-x: scroll;
+  padding: 15px;
+}
+.content:before, .content:after {
+  content: "";
 }
